# video_compression_optimizer

./: .gitignore  .gitmodules  README.md  compression.py  gui.py  main.py  quality_assessment.py  requirements.txt  setup.py
cpp_src/: CMakeLists.txt  python_bindings.cpp  video_processor.cpp  video_processor.hpp
tests/: test_video_processor.py
